// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServerList renders correctly 1`] = `
<div>
  <List
    baseClassName="pul-list"
    className={null}
    columns={
      Array [
        Object {
          "key": "column1",
          "title": "Column1",
        },
      ]
    }
    data={
      Array [
        Object {
          "column1": 0,
          "key": "0",
        },
        Object {
          "column1": 1,
          "key": "1",
        },
        Object {
          "column1": 2,
          "key": "2",
        },
        Object {
          "column1": 3,
          "key": "3",
        },
        Object {
          "column1": 4,
          "key": "4",
        },
      ]
    }
    onSelectionChange={null}
    onSortChange={[Function]}
    rowKey="key"
    selection={Array []}
    sortColumn={null}
    sortDirection="ASC"
  />
</div>
`;

exports[`ServerList renders errors correctly 1`] = `
<div>
  <List
    baseClassName="pul-list"
    className={null}
    columns={
      Array [
        Object {
          "key": "column1",
          "title": "Column1",
        },
      ]
    }
    data={Array []}
    onSelectionChange={null}
    onSortChange={[Function]}
    rowKey="key"
    selection={Array []}
    sortColumn={null}
    sortDirection="ASC"
  />
</div>
`;

exports[`ServerList renders pagination correctly 1`] = `
<div>
  <List
    baseClassName="pul-list"
    className={null}
    columns={
      Array [
        Object {
          "key": "column1",
          "title": "Column1",
        },
      ]
    }
    data={
      Array [
        Object {
          "column1": 0,
          "key": "0",
        },
        Object {
          "column1": 1,
          "key": "1",
        },
        Object {
          "column1": 2,
          "key": "2",
        },
        Object {
          "column1": 3,
          "key": "3",
        },
        Object {
          "column1": 4,
          "key": "4",
        },
        Object {
          "column1": 5,
          "key": "5",
        },
        Object {
          "column1": 6,
          "key": "6",
        },
        Object {
          "column1": 7,
          "key": "7",
        },
        Object {
          "column1": 8,
          "key": "8",
        },
        Object {
          "column1": 9,
          "key": "9",
        },
        Object {
          "column1": 10,
          "key": "10",
        },
        Object {
          "column1": 11,
          "key": "11",
        },
        Object {
          "column1": 12,
          "key": "12",
        },
        Object {
          "column1": 13,
          "key": "13",
        },
        Object {
          "column1": 14,
          "key": "14",
        },
        Object {
          "column1": 15,
          "key": "15",
        },
        Object {
          "column1": 16,
          "key": "16",
        },
        Object {
          "column1": 17,
          "key": "17",
        },
        Object {
          "column1": 18,
          "key": "18",
        },
        Object {
          "column1": 19,
          "key": "19",
        },
        Object {
          "column1": 20,
          "key": "20",
        },
        Object {
          "column1": 21,
          "key": "21",
        },
        Object {
          "column1": 22,
          "key": "22",
        },
        Object {
          "column1": 23,
          "key": "23",
        },
        Object {
          "column1": 24,
          "key": "24",
        },
      ]
    }
    onSelectionChange={null}
    onSortChange={[Function]}
    rowKey="key"
    selection={Array []}
    sortColumn={null}
    sortDirection="ASC"
  />
  <Pagination
    baseClassName="pul-pagination"
    className={null}
    current={1}
    isShowNavigationButtons={true}
    isShowPageButtons={null}
    maxPageButtons={11}
    onSelect={[Function]}
    total={3}
  />
</div>
`;

exports[`ServerList renders sort correctly 1`] = `
<div>
  <List
    baseClassName="pul-list"
    className={null}
    columns={
      Array [
        Object {
          "key": "column1",
          "title": "Column1",
        },
      ]
    }
    data={
      Array [
        Object {
          "column1": 0,
          "key": "0",
        },
        Object {
          "column1": 1,
          "key": "1",
        },
        Object {
          "column1": 2,
          "key": "2",
        },
        Object {
          "column1": 3,
          "key": "3",
        },
        Object {
          "column1": 4,
          "key": "4",
        },
        Object {
          "column1": 5,
          "key": "5",
        },
        Object {
          "column1": 6,
          "key": "6",
        },
        Object {
          "column1": 7,
          "key": "7",
        },
        Object {
          "column1": 8,
          "key": "8",
        },
        Object {
          "column1": 9,
          "key": "9",
        },
        Object {
          "column1": 10,
          "key": "10",
        },
        Object {
          "column1": 11,
          "key": "11",
        },
        Object {
          "column1": 12,
          "key": "12",
        },
        Object {
          "column1": 13,
          "key": "13",
        },
        Object {
          "column1": 14,
          "key": "14",
        },
        Object {
          "column1": 15,
          "key": "15",
        },
        Object {
          "column1": 16,
          "key": "16",
        },
        Object {
          "column1": 17,
          "key": "17",
        },
        Object {
          "column1": 18,
          "key": "18",
        },
        Object {
          "column1": 19,
          "key": "19",
        },
        Object {
          "column1": 20,
          "key": "20",
        },
        Object {
          "column1": 21,
          "key": "21",
        },
        Object {
          "column1": 22,
          "key": "22",
        },
        Object {
          "column1": 23,
          "key": "23",
        },
        Object {
          "column1": 24,
          "key": "24",
        },
      ]
    }
    onSelectionChange={null}
    onSortChange={[Function]}
    rowKey="key"
    selection={Array []}
    sortColumn="column1"
    sortDirection="ASC"
  />
  <Pagination
    baseClassName="pul-pagination"
    className={null}
    current={1}
    isShowNavigationButtons={true}
    isShowPageButtons={null}
    maxPageButtons={11}
    onSelect={[Function]}
    total={3}
  />
</div>
`;
